--- a/index.html
+++ b/index.html
@@ -6,103 +6,117 @@
     <meta name="keywords" content="Анцифров, Владислав, резюме">
     <meta name="description" content="Это сайт о Владиславе Анцифрове и его жизненном опыте в работе">
     <title>Сайт-резюме</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <img src="imgs/cropped-IMG_8207.JPG" alt="Фото Анцифров" width="200">
-    <h1>Владислав Анцифров</h1>
-    <p><strong>Я программист, мне 37 лет.</strong> Специализируюсь на языке программирования 1С. Но сейчас решил занятся веб программированием и в данный момент изучаю HTML и CSS.</p>
-    <p><em>Разведен. Есть дочка. Но это не точка :)</em></p>
-    <h2>Список социальных сетей</h2>
-    <p>
-        <a href="http://instagram.com/lucius.pvl" target="_blank">Instagram</a>
-        |
-        <a href="http://vk.com/luciuspvl" target="_blank">VKontakte</a>
-    </p>
-    <br>
-    <h2>Опыт работы</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Название компании</th>
-                <th>Должность</th>
-                <th>Годы работы</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>ТОО Центр мобильных приложений</td>
-                <td>Дирктор</td>
-                <td>2019 - по текущее время</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>Первый БИТ</td>
-                <td>Руководитель отдела внедрения</td>
-                <td>2019 - 2019</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>ТОО Центр мобильных приложений</td>
-                <td>Дирктор</td>
-                <td>2016 - 2019</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>ИП Анцифров Владислав Владимирович</td>
-                <td>Дирктор</td>
-                <td>2013 - 2016</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>ТОО Решения для бизнеса</td>
-                <td>Начальник отдела программирования</td>
-                <td>2012 - 2013</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>ТОО Верное решение</td>
-                <td>Ведущий программист</td>
-                <td>2007 - 2012</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>ВК ОФ АО Национальный центр "Курылысконсалтинг"</td>
-                <td>Техник-программист</td>
-                <td>2006 - 2007</td>
-            </tr>
-        </tbody>
-    </table>
-    <br>
-    <h2>Мои хобби</h2>
-    <ol>
-        <li>Программирование</li>
-        <li>Ходьба</li>
-        <li>Плаванье</li>
-        <li>Тренажерный зал</li>
-    </ol>
-    <h2>Связаться со мной</h2>
+    <div class="container">
 
-    <form>
-        <div>
-            <label for="name">Ваше имя</label>
-            <input type="text" id="name" placeholder="Введите имя">
+        <div class="inf">
+            <div class="inf-1">
+                <img class="photo" src="imgs/cropped-IMG_8207.JPG" alt="Фото Анцифров">
+            </div>
+            <div class="inf-2">
+                <div class="header">
+                    <h1>Владислав Анцифров</h1>
+                    <p><span class="bold">Я программист, мне 37 лет.</span> Специализируюсь на языке программирования 1С. Но сейчас решил занятся веб программированием и в данный момент изучаю HTML и CSS.</p>
+                    <p><span class="italic">Разведен. Есть дочка. Но это не точка :)</span></p>
+                    <h2>Список социальных сетей</h2>
+                    <p>
+                        <a href="http://instagram.com/lucius.pvl" target="_blank">Instagram</a>
+                        |
+                        <a href="http://vk.com/luciuspvl" target="_blank">VKontakte</a>
+                    </p>
+                </div>
+            </div>
         </div>
-        <div>
-            <label for="email">Ваш email</label>
-            <input type="email" id="email" placeholder="Введите email">
+
+        <div class="card bg-1">
+            <h2>Опыт работы</h2>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Название компании</th>
+                        <th>Должность</th>
+                        <th>Годы работы</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>ТОО Центр мобильных приложений</td>
+                        <td>Директор</td>
+                        <td>2019 - по текущее время</td>
+                    </tr>
+                    <tr>
+                        <td>Первый БИТ</td>
+                        <td>Руководитель отдела внедрения</td>
+                        <td>2019 - 2019</td>
+                    </tr>
+                    <tr>
+                        <td>ТОО Центр мобильных приложений</td>
+                        <td>Директор</td>
+                        <td>2016 - 2019</td>
+                    </tr>
+                    <tr>
+                        <td>ИП Анцифров Владислав Владимирович</td>
+                        <td>Директор</td>
+                        <td>2013 - 2016</td>
+                    </tr>
+                    <tr>
+                        <td>ТОО Решения для бизнеса</td>
+                        <td>Начальник отдела программирования</td>
+                        <td>2012 - 2013</td>
+                    </tr>
+                    <tr>
+                        <td>ТОО Верное решение</td>
+                        <td>Ведущий программист</td>
+                        <td>2007 - 2012</td>
+                    </tr>
+                    <tr>
+                        <td>ВК ОФ АО Национальный центр "Курылысконсалтинг"</td>
+                        <td>Техник-программист</td>
+                        <td>2006 - 2007</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        <div>
-            <label for="messsage">Ваше сообщение</label>
-            <br>
-            <textarea id="messsage" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
+
+        <div class="card bg-2">
+            <h2>Мои хобби</h2>
+            <ol class="list">
+                <li>Программирование</li>
+                <li>Пешие прогулки</li>
+                <li>Плаванье в бассейне</li>
+                <li>Тренажерный зал</li>
+            </ol>
         </div>
-        <button type="submit">Отправить!</button>
-    </form>
+
+        <div class="card bg-3">
+            <h2>Мои курсы</h2>
+            <ul class="list">
+                <li>Бухгалтерия</li>
+                <li>Коммерчиский директор</li>
+                <li>Frontend разработчик</li>
+            </ul>
+        </div>
+
+        <form>
+            <div class="contact">
+                <h2>Связаться со мной</h2>
+                <div class="form-gr">
+                    <label class="name" for="name">Ваше имя:</label>
+                    <input class="name" type="text" id="name" placeholder="Введите имя">
+                </div>
+                <div class="form-gr">
+                    <label class="email" for="email">Ваш email:</label>
+                    <input class="email" type="email" id="email" placeholder="Введите email">
+                </div>
+                <div class="form-gr">
+                    <label for="messsage">Ваше сообщение:</label>
+                    <textarea id="messsage" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
+                </div>
+                <div><button class="btn" type="submit">Отправить!</button></div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
